--- a/index.html
+++ b/index.html
@@ -9,72 +9,75 @@
 
 <body>
     <header class="header-main">
-        <nav class="header-main__navigation">
-            <img class="header-main__navigation-logo" src="Image/placeholder.svg" alt="logotype" width="160px"
-                height="65px">
-            <ul class="header-main__navigation-list">
-                <li class="header-main__navigation-list-item"><a class="header-main__navigation-link"
-                        href="#">Студия</a></li>
-                <li class="header-main__navigation-list-item"><a class="header-main__navigation-link"
-                        href="#">Клиенты</a></li>
-                <li class="header-main__navigation-list-item"><a class="header-main__navigation-link"
-                        href="#">Магазин</a></li>
-                <li class="header-main__navigation-list-item"><a class="header-main__navigation-link"
-                        href="#">Контакты</a></li>
-            </ul>
+        <div class="header-main__wrapper">
+            <a class="header-main__logo-link" href="#"><img class="header-main__logo-image"
+                    src="./image/placeholder.svg" alt="logotype" width="160px" height="65px"></a>
+            <nav class="header-main__navigation">
+                <ul class="header-main__navigation-list">
+                    <li class="header-main__navigation-list-item"><a class="header-main__navigation-link"
+                            href="#">Студия</a></li>
+                    <li class="header-main__navigation-list-item"><a class="header-main__navigation-link"
+                            href="#">Клиенты</a></li>
+                    <li class="header-main__navigation-list-item"><a class="header-main__navigation-link"
+                            href="#">Магазин</a></li>
+                    <li class="header-main__navigation-list-item"><a class="header-main__navigation-link"
+                            href="#">Контакты</a></li>
+                </ul>
+            </nav>
             <a class="header-main__navigation-cart" href="#">Корзина</a>
-        </nav>
+        </div>
     </header>
-    <section class="slider-block">
-        <article class="slider slider__one">
+    <section class="intro">
+        <div class="intro__slider">
             <h2 class="slider__title">Долго, дорого, скрупулезно.</h2>
             <p class="slider__description">Математически выверенный дизайн для вашего сайта или мобильного приложения.
             </p>
             <a class="slider__button" href="#">Узнать больше</a>
-            <img class="slider__image" src="Image/placeholder.svg" alt="Три одинаковых телефона." width="760px"
+            <img class="slider__image" src="./image/placeholder.svg" alt="Три одинаковых телефона." width="760px"
                 height="431px">
-        </article>
-        <article class="slider slider__two">
+        </div>
+        <div class="intro__slider">
             <h2 class="slider__title">Любим математику как никто другой</h2>
             <p class="slider__description">Никакого креатива, только математические формулы для расчета идеальных
                 пропорций
             </p>
             <a class="slider__button" href="#">Узнать больше</a>
-            <img class="slider__image" src="Image/placeholder.svg" alt="Два монитора." width="760px" height="431px>
-        </article>
-        <article class=" slider slider__three">
+            <img class="slider__image" src="./image/placeholder.svg" alt="Два монитора." width="760px" height="431px">
+        </div>
+        <div class="intro__slider">
             <h2 class="slider__title">Только ночь, только хардкор</h2>
             <p class="slider__description">Работать днем, как все? Мы против этого.Ближе к полуночи работа только
                 начинается.</p>
             <a class="slider__button" href="#">Узнать больше</a>
-            <img class="slider__image" src="Image/placeholder.svg" alt="Телефон и планшет." width="760px" height="431px>
-        </article>
+            <img class="slider__image" src="./image/placeholder.svg" alt="Телефон и планшет." width="760px"
+                height="431px">
+        </div>
     </section>
     <section class=" promotion-block">
-            <ul class="promotion-block__list">
-                <li class="promotion-block__list-item">
-                    <h2 class="promotion-block__title">Веб-сайты</h2>
-                    <p class="promotion-block__text">Мир никогда не будет прежним после того как увидит ваш сайт!</p>
-                    <a href="promotion-block__link button-one">Заказать</a>
-                </li>
-                <li class="promotion-block__list-item">
-                    <h2 class="promotion-block__title">Приложения</h2>
-                    <p class="promotion-block__text">Покорите топ-10 приложений в AppStore и Google Play</p>
-                    <a href="promotion-block__link button-two">Заказать</a>
-                </li>
-                <li class="promotion-block__list-item">
-                    <h2 class="promotion-block__title">Презентации</h2>
-                    <p class="promotion-block__text">Вы даже не подозреваете, насколько вы изумительны!</p>
-                    <a href="promotion-block__link button-three">Заказать</a>
-                </li>
-            </ul>
+        <ul class="promotion-block__list">
+            <li class="promotion-block__list-item">
+                <h3 class="promotion-block__title">Веб-сайты</h3>
+                <p class="promotion-block__text">Мир никогда не будет прежним после того как увидит ваш сайт!</p>
+                <a class="promotion-block__link button-one" href="#">Заказать</a>
+            </li>
+            <li class="promotion-block__list-item">
+                <h3 class="promotion-block__title">Приложения</h3>
+                <p class="promotion-block__text">Покорите топ-10 приложений в AppStore и Google Play</p>
+                <a class="promotion-block__link button-two" href="#">Заказать</a>
+            </li>
+            <li class="promotion-block__list-item">
+                <h3 class="promotion-block__title">Презентации</h3>
+                <p class="promotion-block__text">Вы даже не подозреваете, насколько вы изумительны!</p>
+                <a class="promotion-block__link button-three" href="#">Заказать</a>
+            </li>
+        </ul>
     </section>
     <section class="studio-block">
         <div class="studio-block__service">
             <h2 class="service__title">Мы — маленькая, но гордая дизайн-студия из Краснодара.</h2>
             <p class="service__text">Исповедуем принципы минимализма и чистоты. Ставим математический расчет превыше
                 креатива. Работаем не покладая рук, как роботы.</p>
-            <h3 class="service__list-title">Выполняем заказы на разработку:</h3>
+            <p class="service__list-title">Выполняем заказы на разработку:</p>
             <ul class="service__list">
                 <li class="service__list-item">Веб-сайтов любой сложности</li>
                 <li class="service__list-item">Мобильных приложений для IOS и Android</li>
@@ -82,7 +85,7 @@
             </ul>
         </div>
         <div class="studio-block__statistics">
-            <img class="statistics__image" src="Image/placeholder.svg" alt="Логотип сайта nerds." width="360px"
+            <img class="statistics__image" src="./image/placeholder.svg" alt="Логотип сайта nerds." width="360px"
                 height="208px">
             <h2 class="statistics__list-title">с 2004 года Любим точность во всем:</h2>
             <ul class="statistics__list">
@@ -102,37 +105,38 @@
         </div>
         <div class="studio-block__partners">
             <ul class="partners__list">
-                <li class="partners__list-item"><img class="partners__item-image" src="Image/placeholder.svg"
+                <li class="partners__list-item"><img class="partners__item-image" src="./image/placeholder.svg"
                         alt="HTML академия." width="199px" height="68px"></li>
-                <li class="partners__list-item"><img class="partners__item-image" src="Image/placeholder.svg"
+                <li class="partners__list-item"><img class="partners__item-image" src="./image/placeholder.svg"
                         alt="Barbershop Borodinski." width="209px" height="90px"></li>
-                <li class="partners__list-item"><img class="partners__item-image" src="Image/placeholder.svg"
+                <li class="partners__list-item"><img class="partners__item-image" src="./image/placeholder.svg"
                         alt="Фирми Pink" width="185px" height="52px"></li>
-                <li class="partners__list-item"><img class="partners__item-image" src="Image/placeholder.svg"
+                <li class="partners__list-item"><img class="partners__item-image" src="./image/placeholder.svg"
                         alt="Фирма Mishka" width="173px" height="84px"></li>
             </ul>
         </div>
     </section>
     <section class="connection-block">
-        <img class="connection-block__map" src="Image/placeholder.svg" alt="Карта с местонахождением офиса.">
+        <img class="connection-block__map" src="./image/placeholder.svg" alt="Карта с местонахождением офиса."
+            width="1440px" height="416px">
         <div class="connection-block__contact-information">
             <h2 class="contact-information__title">NЁRDS DESIGN STUDIO</h2>
             <address class="contact-information__address">191186, Санкт-Петербург, ул. Б. Конюшенная, д. 19/8
             </address>
-            <a class="contact-information__tel" href="tel:+7 (812) 275-75-75">тел. +7 (812) 275-75-75</a>
+            <a class="contact-information__tel" href="tel:+78122757575">тел. +7 (812) 275-75-75</a>
             <a class="contact-information__mail" href="#">Напишите нам</a>
         </div>
     </section>
     <footer class="footer-main">
         <ul class="footer-main__social-list">
             <li class="social-list_item"><a href="#" class="social-list__item-link"><img class="social-list__link-image"
-                        src="Image/placeholder.svg" alt="Vkontakte." width="26px" height="15px"></a></li>
+                        src="./image/placeholder.svg" alt="Vkontakte." width="26px" height="15px"></a></li>
             <li class="social-list_item"><a href="#" class="social-list__item-link"><img class="social-list__link-image"
-                        src="Image/placeholder.svg" alt="Facebook." width="12px" height="22px"></a></li>
+                        src="./image/placeholder.svg" alt="Facebook." width="12px" height="22px"></a></li>
             <li class="social-list_item"><a href="#" class="social-list__item-link"><img class="social-list__link-image"
-                        src="Image/placeholder.svg" alt="Instagram" width="21px" height="21px"></a></li>
+                        src="./image/placeholder.svg" alt="Instagram" width="21px" height="21px"></a></li>
         </ul>
-        <h2 class="footer-main_title">Давайте дружить, это выгодно!</h2>
+        <p class="footer-main_title">Давайте дружить, это выгодно!</p>
         <p class="footer-main-text">Скидка 10% для друзей из социальных сетей.</p>
     </footer>
     <section class="modal-window">
@@ -140,15 +144,15 @@
         <form class="modal-window__form" action="" method="get">
             <p class="form__name-block">
                 <label class="name-block__label" for="name">Ваше имя:</label>
-                <input class="name-block__input" type="text" name="name" placeholder="Имя Фамилия">
+                <input class="name-block__input" type="text" name="name" id="name" placeholder="Имя Фамилия">
             </p>
             <p class="form__mail-block">
                 <label class="mail-block__label" for="email">Ваш email:</label>
-                <input class="mail-block__input" type="email" name="email" placeholder="email@example.com ">
+                <input class="mail-block__input" type="email" name="email" id="email" placeholder="email@example.com ">
             </p>
             <p class="form__letter-block">
                 <label class="letter-block__label" for="text">Текст письма:</label>
-                <input class="letter-block__input" type="text" name="text" placeholder="В свободной форме">
+                <input class="letter-block__input" type="text" name="text" id="name" placeholder="В свободной форме">
             </p>
             <button class="modal-window__button" name="button" type="submit">Отпрваить</button>
         </form>
