--- a/index.html
+++ b/index.html
@@ -28,131 +28,139 @@
         </div>
     </header>
     <section class="intro">
-        <div class="intro__slider">
-            <h2 class="slider__title">Долго, дорого, скрупулезно.</h2>
-            <p class="slider__description">Математически выверенный дизайн для вашего сайта или мобильного приложения.
+        <div class="intro-slider">
+            <h2 class="intro-slider__title">Долго, дорого, скрупулезно.</h2>
+            <p class="intro-slider__description">Математически выверенный дизайн для вашего сайта или мобильного
+                приложения.
             </p>
-            <a class="slider__button" href="#">Узнать больше</a>
-            <img class="slider__image" src="./image/placeholder.svg" alt="Три одинаковых телефона." width="760px"
+            <a class="intro-slider__button" href="#">Узнать больше</a>
+            <img class="intro-slider__image" src="./image/placeholder.svg" alt="Три одинаковых телефона." width="760px"
                 height="431px">
         </div>
-        <div class="intro__slider">
-            <h2 class="slider__title">Любим математику как никто другой</h2>
-            <p class="slider__description">Никакого креатива, только математические формулы для расчета идеальных
+        <div class="intro-slider">
+            <h2 class="intro-slider__title">Любим математику как никто другой</h2>
+            <p class="intro-slider__description">Никакого креатива, только математические формулы для расчета идеальных
                 пропорций
             </p>
-            <a class="slider__button" href="#">Узнать больше</a>
-            <img class="slider__image" src="./image/placeholder.svg" alt="Два монитора." width="760px" height="431px">
+            <a class="intro-slider__button" href="#">Узнать больше</a>
+            <img class="intro-slider__image" src="./image/placeholder.svg" alt="Два монитора." width="760px"
+                height="431px">
         </div>
-        <div class="intro__slider">
-            <h2 class="slider__title">Только ночь, только хардкор</h2>
-            <p class="slider__description">Работать днем, как все? Мы против этого.Ближе к полуночи работа только
+        <div class="intro-slider">
+            <h2 class="intro-slider__title">Только ночь, только хардкор</h2>
+            <p class="intro-slider__description">Работать днем, как все? Мы против этого.Ближе к полуночи работа только
                 начинается.</p>
-            <a class="slider__button" href="#">Узнать больше</a>
-            <img class="slider__image" src="./image/placeholder.svg" alt="Телефон и планшет." width="760px"
+            <a class="intro-slider__button" href="#">Узнать больше</a>
+            <img class="intro-slider__image" src="./image/placeholder.svg" alt="Телефон и планшет." width="760px"
                 height="431px">
         </div>
     </section>
-    <section class=" promotion-block">
-        <ul class="promotion-block__list">
-            <li class="promotion-block__list-item">
-                <h3 class="promotion-block__title">Веб-сайты</h3>
-                <p class="promotion-block__text">Мир никогда не будет прежним после того как увидит ваш сайт!</p>
-                <a class="promotion-block__link button-one" href="#">Заказать</a>
+    <section class=" promotion">
+        <ul class="promotion__list">
+            <li class="promotion__list-item">
+                <h3 class="promotion__title">Веб-сайты</h3>
+                <p class="promotion__text">Мир никогда не будет прежним после того как увидит ваш сайт!</p>
+                <a class="promotion__link button-one" href="#">Заказать</a>
             </li>
-            <li class="promotion-block__list-item">
-                <h3 class="promotion-block__title">Приложения</h3>
-                <p class="promotion-block__text">Покорите топ-10 приложений в AppStore и Google Play</p>
-                <a class="promotion-block__link button-two" href="#">Заказать</a>
+            <li class="promotion__list-item">
+                <h3 class="promotion__title">Приложения</h3>
+                <p class="promotion__text">Покорите топ-10 приложений в AppStore и Google Play</p>
+                <a class="promotion__link button-two" href="#">Заказать</a>
             </li>
-            <li class="promotion-block__list-item">
-                <h3 class="promotion-block__title">Презентации</h3>
-                <p class="promotion-block__text">Вы даже не подозреваете, насколько вы изумительны!</p>
-                <a class="promotion-block__link button-three" href="#">Заказать</a>
+            <li class="promotion__list-item">
+                <h3 class="promotion__title">Презентации</h3>
+                <p class="promotion__text">Вы даже не подозреваете, насколько вы изумительны!</p>
+                <a class="promotion__link button-three" href="#">Заказать</a>
             </li>
         </ul>
     </section>
-    <section class="studio-block">
-        <div class="studio-block__service">
-            <h2 class="service__title">Мы — маленькая, но гордая дизайн-студия из Краснодара.</h2>
-            <p class="service__text">Исповедуем принципы минимализма и чистоты. Ставим математический расчет превыше
+    <section class="studio">
+        <div class="studio__service">
+            <h2 class="studio__service-title">Мы — маленькая, но гордая дизайн-студия из Краснодара.</h2>
+            <p class="studio__service-text">Исповедуем принципы минимализма и чистоты. Ставим математический расчет
+                превыше
                 креатива. Работаем не покладая рук, как роботы.</p>
-            <p class="service__list-title">Выполняем заказы на разработку:</p>
-            <ul class="service__list">
-                <li class="service__list-item">Веб-сайтов любой сложности</li>
-                <li class="service__list-item">Мобильных приложений для IOS и Android</li>
-                <li class="service__list-item">Слайдшоу и видео для корпоротивных презентаций</li>
+            <p class="studio__service-list-title">Выполняем заказы на разработку:</p>
+            <ul class="studio__service-list">
+                <li class="studio__service-list-item">Веб-сайтов любой сложности</li>
+                <li class="studio__service-list-item">Мобильных приложений для IOS и Android</li>
+                <li class="studio__service-list-item">Слайдшоу и видео для корпоротивных презентаций</li>
             </ul>
         </div>
-        <div class="studio-block__statistics">
-            <img class="statistics__image" src="./image/placeholder.svg" alt="Логотип сайта nerds." width="360px"
+        <div class="studio__statistics">
+            <img class="studio__statistics-image" src="./image/placeholder.svg" alt="Логотип сайта nerds." width="360px"
                 height="208px">
-            <h2 class="statistics__list-title">с 2004 года Любим точность во всем:</h2>
-            <ul class="statistics__list">
-                <li class="statistics__list-item">
-                    <p class="service__item-procent">146<sup>%</sup></p>
-                    <p class="service__item-text">Уровень самоотдачи</p>
+            <h2 class="studio__statistics-list-title">с 2004 года Любим точность во всем:</h2>
+            <ul class="studio__statistics-list">
+                <li class="studio__statistics-list-item">
+                    <p class="studio__statistics-item-procent">146<sup>%</sup></p>
+                    <p class="studio__statistics-item-text">Уровень самоотдачи</p>
                 </li>
-                <li class="statistics__list-item">
-                    <p class="service__item-procent">100<sup>%</sup></p>
-                    <p class="service__item-text">Соблюдение сроков</p>
+                <li class="studio__statistics-list-item">
+                    <p class="studio__statistics-item-procent">100<sup>%</sup></p>
+                    <p class="studio__statistics-item-text">Соблюдение сроков</p>
                 </li>
-                <li class="statistics__list-item">
-                    <p class="service__item-procent">50<sup>%</sup></p>
-                    <p class="service__item-text">Минимальная предоплата</p>
+                <li class="studio__statistics-list-item">
+                    <p class="studio__statistics-item-procent">50<sup>%</sup></p>
+                    <p class="studio__statistics-item-text">Минимальная предоплата</p>
                 </li>
             </ul>
         </div>
-        <div class="studio-block__partners">
-            <ul class="partners__list">
-                <li class="partners__list-item"><img class="partners__item-image" src="./image/placeholder.svg"
-                        alt="HTML академия." width="199px" height="68px"></li>
-                <li class="partners__list-item"><img class="partners__item-image" src="./image/placeholder.svg"
-                        alt="Barbershop Borodinski." width="209px" height="90px"></li>
-                <li class="partners__list-item"><img class="partners__item-image" src="./image/placeholder.svg"
-                        alt="Фирми Pink" width="185px" height="52px"></li>
-                <li class="partners__list-item"><img class="partners__item-image" src="./image/placeholder.svg"
-                        alt="Фирма Mishka" width="173px" height="84px"></li>
+        <div class="studio__partners">
+            <ul class="studio__partners-list">
+                <li class="studio__partners-list-item"><img class="studio__partners-item-image"
+                        src="./image/placeholder.svg" alt="HTML академия." width="199px" height="68px"></li>
+                <li class="studio__partners-list-item"><img class="studio__partners-item-image"
+                        src="./image/placeholder.svg" alt="Barbershop Borodinski." width="209px" height="90px"></li>
+                <li class="studio__partners-list-item"><img class="studio__partners-item-image"
+                        src="./image/placeholder.svg" alt="Фирми Pink" width="185px" height="52px"></li>
+                <li class="studio__partners-list-item"><img class="studio__partners-item-image"
+                        src="./image/placeholder.svg" alt="Фирма Mishka" width="173px" height="84px"></li>
             </ul>
         </div>
     </section>
-    <section class="connection-block">
-        <img class="connection-block__map" src="./image/placeholder.svg" alt="Карта с местонахождением офиса."
-            width="1440px" height="416px">
-        <div class="connection-block__contact-information">
-            <h2 class="contact-information__title">NЁRDS DESIGN STUDIO</h2>
-            <address class="contact-information__address">191186, Санкт-Петербург, ул. Б. Конюшенная, д. 19/8
+    <section class="connection">
+        <img class="connection__map" src="./image/placeholder.svg" alt="Карта с местонахождением офиса." width="1440px"
+            height="416px">
+        <div class="connection__contact-information">
+            <h2 class="connection__contact-information-title">NЁRDS DESIGN STUDIO</h2>
+            <address class="connection__contact-information-address">191186, Санкт-Петербург, ул. Б. Конюшенная, д. 19/8
             </address>
-            <a class="contact-information__tel" href="tel:+78122757575">тел. +7 (812) 275-75-75</a>
-            <a class="contact-information__mail" href="#">Напишите нам</a>
+            <a class="connection__contact-information-tel" href="tel:+78122757575">тел. +7 (812) 275-75-75</a>
+            <a class="connection__contact-information-mail" href="#">Напишите нам</a>
         </div>
     </section>
     <footer class="footer-main">
         <ul class="footer-main__social-list">
-            <li class="social-list_item"><a href="#" class="social-list__item-link"><img class="social-list__link-image"
-                        src="./image/placeholder.svg" alt="Vkontakte." width="26px" height="15px"></a></li>
-            <li class="social-list_item"><a href="#" class="social-list__item-link"><img class="social-list__link-image"
-                        src="./image/placeholder.svg" alt="Facebook." width="12px" height="22px"></a></li>
-            <li class="social-list_item"><a href="#" class="social-list__item-link"><img class="social-list__link-image"
-                        src="./image/placeholder.svg" alt="Instagram" width="21px" height="21px"></a></li>
+            <li class="footer-main__social-list-item"><a href="#" class="footer-main__social-item-link"><img
+                        class="footer-main__social-item-image" src="./image/placeholder.svg" alt="Vkontakte."
+                        width="26px" height="15px"></a></li>
+            <li class="footer-main__social-list-item"><a href="#" class="footer-main__social-item-link"><img
+                        class="footer-main__social-item-image" src="./image/placeholder.svg" alt="Facebook."
+                        width="12px" height="22px"></a></li>
+            <li class="footer-main__social-list-item"><a href="#" class="footer-main__social-item-link"><img
+                        class="footer-main__social-item-image" src="./image/placeholder.svg" alt="Instagram"
+                        width="21px" height="21px"></a></li>
         </ul>
-        <p class="footer-main_title">Давайте дружить, это выгодно!</p>
-        <p class="footer-main-text">Скидка 10% для друзей из социальных сетей.</p>
+        <p class="footer-main__title">Давайте дружить, это выгодно!</p>
+        <p class="footer-main__text">Скидка 10% для друзей из социальных сетей.</p>
     </footer>
     <section class="modal-window">
         <h2 class="modal-window__title">Напишите нам</h2>
         <form class="modal-window__form" action="" method="get">
-            <p class="form__name-block">
-                <label class="name-block__label" for="name">Ваше имя:</label>
-                <input class="name-block__input" type="text" name="name" id="name" placeholder="Имя Фамилия">
+            <p class="modal-window__form-name-block">
+                <label class="modal-window-block__label" for="name">Ваше имя:</label>
+                <input class="modal-window-block__input" type="text" name="name" id="name" placeholder="Имя Фамилия">
             </p>
-            <p class="form__mail-block">
-                <label class="mail-block__label" for="email">Ваш email:</label>
-                <input class="mail-block__input" type="email" name="email" id="email" placeholder="email@example.com ">
+            <p class="modal-window__form-mail-block">
+                <label class="modal-window__form-mail-block-label" for="email">Ваш email:</label>
+                <input class="modal-window__form-mail-block-input" type="email" name="email" id="email"
+                    placeholder="email@example.com ">
             </p>
-            <p class="form__letter-block">
-                <label class="letter-block__label" for="text">Текст письма:</label>
-                <input class="letter-block__input" type="text" name="text" id="name" placeholder="В свободной форме">
+            <p class="modal-window__form-letter-block">
+                <label class="modal-window__form-letter-block-label" for="text">Текст письма:</label>
+                <input class="modal-window__form-letter-block-input" type="text" name="text" id="name"
+                    placeholder="В свободной форме">
             </p>
             <button class="modal-window__button" name="button" type="submit">Отпрваить</button>
         </form>
