--- a/index.html
+++ b/index.html
@@ -4,14 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/style.css">
     <title>Nerds-main</title>
 </head>
 
 <body>
     <header class="header-main">
         <div class="header-main__wrapper">
-            <a class="header-main__logo-link" href="#"><img class="header-main__logo-image"
-                    src="./image/placeholder.svg" alt="logotype" width="160px" height="65px"></a>
+            <a class="header-main__logo-link" href="#"><img class="header-main__logo-image" src="./image/nerds-logo.png"
+                    alt="logotype" width="160px" height="65px"></a>
             <nav class="header-main__navigation">
                 <ul class="header-main__navigation-list">
                     <li class="header-main__navigation-list-item"><a class="header-main__navigation-link"
@@ -24,6 +25,8 @@
                             href="#">Контакты</a></li>
                 </ul>
             </nav>
+            <a class="header-main__navigation-cart-link" href="#"><img class="header-main__navigation-cart-image"
+                    src="/image/cart-icon.svg" alt="Логотип корзины." width="15px" height="15px"></a>
             <a class="header-main__navigation-cart" href="#">Корзина</a>
         </div>
     </header>
